--- a/styles.css
+++ b/styles.css
@@ -129,3 +129,38 @@ main {
   font-size: 11px;
   line-height: 16.8px;
 }
+
+@media (max-width: 1200px) {
+  main {
+    width: 70%;
+  }
+
+  header {
+    padding: 50px 15%;
+  }
+}
+
+@media (max-width: 768px) {
+  main {
+    width: 90%;
+  }
+
+  header {
+    padding: 50px 5%;
+  }
+
+  .grid-col-span-4 .card-header,
+  .grid-col-span-6 .card-header,
+  .grid-col-span-8 .card-header {
+    font-size: 1.5rem;
+  }
+
+  #posts-grid {
+    grid-template-columns: 100%;
+  }
+
+  .card {
+    grid-column: span 1;
+    grid-row: span 1;
+  }
+}
