--- a/styles.css
+++ b/styles.css
@@ -15,24 +15,24 @@ nav {
   align-items: center;
   justify-content: space-between;
   padding: 0 10%;
-  min-width: 50%;
   position: fixed;
   top: 0;
   width: 100%;
   box-sizing: border-box;
 }
 
-#nav-links-container {
+.nav-links-container {
   display: flex;
   gap: 20px;
 }
 
 .nav-link {
   all: unset;
+  cursor: pointer;
   font-size: 14px;
 }
 
-header {
+.content-header {
   margin-top: 80px;
   padding: 50px 25%;
   box-sizing: border-box;
@@ -41,7 +41,7 @@ header {
   background-color: #ffffff;
 }
 
-header h1 {
+.content-header h1 {
   font-size: 36px;
   font-weight: 400;
   line-height: 40px;
@@ -49,13 +49,13 @@ header h1 {
   text-shadow: 0px 4px 4px #00000040;
 }
 
-main {
+.content {
+  margin-block: 50px;
   margin-inline: auto;
   width: 50%;
 }
 
-#posts-grid {
-  margin-block: 50px;
+.posts-grid {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   gap: 10px;
@@ -131,21 +131,21 @@ main {
 }
 
 @media (max-width: 1200px) {
-  main {
+  .content {
     width: 70%;
   }
 
-  header {
+  .content-header {
     padding: 50px 15%;
   }
 }
 
 @media (max-width: 768px) {
-  main {
+  .content {
     width: 90%;
   }
 
-  header {
+  .content-header {
     padding: 50px 5%;
   }
 
@@ -155,7 +155,7 @@ main {
     font-size: 1.5rem;
   }
 
-  #posts-grid {
+  .posts-grid {
     grid-template-columns: 100%;
   }
 
